--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,16 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-.background {
-	background-image: url('./images/landscape.jpg');
+.container {
+	max-width: 950px;
+	width: 100%;
+	height: 560px;
+	margin: 0 auto;
+	background-image: url("images/background.jpg");
+	background-position: center;
 }
+/*.background {
+	background-image: url("images/background.jpg");
+	width: 900px;
+	height: 560px;
+}*/
