--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 	width: 100%;
 	height: 560px;
 	margin: 0 auto;
+	position: relative;
 	background-image: url("images/background.jpg");
 	background-position: center;
 }
@@ -16,3 +17,22 @@
 	width: 900px;
 	height: 560px;
 }*/
+.redcar {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	animation-name: redcardanime;
+	animation-duration: 6s;
+	animation-delay: 0.5s;
+	animation-timing-function: linear;
+	animation-fill-mode: backwards;
+}
+@keyframes redcardanime {
+	from {
+		top: 5px;
+
+	}
+	to {
+		top: 500px;
+	}
+}
