--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@
 	box-sizing: border-box;
 }
 .container {
-	max-width: 1200px;
+	max-width: 1107px;
 	width: 100%;
-	height: 760px;
+	height: 560px;
 	margin: 0 auto;
 	position: relative;
 	background-image: url("images/background.jpg");
@@ -17,50 +17,89 @@
 	width: 900px;
 	height: 560px;
 }*/
-.redcar {
+.bluecar {
 	position: absolute;
-	width: 200px;
-	height: 200px;
-	animation-name: redcardanime;
-	animation-duration: 6s;
+	width: 366px;
+    height: 126px;
+	animation-name: bluecaranime;
+	animation-duration: 10s;
 	animation-delay: 0.3s;
 	animation-timing-function: linear;
 	animation-fill-mode: backwards;
 	animation-iteration-count: 5;
 	animation-direction: alternate;
-	background-image: url("images/red car.png");
+	background-image: url("images/bluecar.png");
 }
-@keyframes redcardanime {
+@keyframes bluecaranime {
 	0% {
-		top: 300px;
+		top: 65%;
 		left: 0;
 	}
 	100% {
-		top: 300px;
-		left: 800px;
+		top: 65%;
+		left: 100%;
 	}
 }
-.bluecar {
+.pinkcar {
 	position: absolute;
-	background-image: url("images/blue car.png");
-	width: 200px;
-	height: 200px;
-	animation-name: bluecaranime;
-	animation-duration: 6s;
+	background-image: url("images/pinkcar.png");
+    width: 297px;
+    height: 167px;
+	animation-name: pinkcaranime;
+	animation-duration: 10s;
 	animation-delay: 0.3s;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 	animation-iteration-count: 5;
 	animation-direction: alternate;
+	z-index: 1;
 }
-@keyframes bluecaranime {
+@keyframes pinkcaranime {
 	0% {
-		top: 300px;
+		top: 70%;
 		right: 0;
 
 	}
 	100% {
-		top: 300px;
-		right: 850px;
+		top: 70%;
+		right: 100%;
+	}
+}
+.sun {
+	position: absolute;
+	background-image: url("images/sun.png");
+    width: 200px;
+    height: 200px;
+	animation-name: sunanime;
+	animation-duration: 10s;
+	animation-delay: 0.3s;
+	animation-timing-function: linear;
+	animation-fill-mode: backwards;
+	animation-iteration-count: 2;
+	animation-direction: normal;
+/*	animation-play-state: running;*/
+	animation-iteration-count: infinite;
+
+}
+@keyframes sunanime {
+/*	0% {
+		top: 20%;
+		left: 0;
+	}*/
+	30% {
+		top: 10%;
+		left: 10%;
+	}
+	50% {
+		top: 20%;
+		left: 30%;
+	}
+	80% {
+		top: 20%;
+		left: 30%;
+	}
+	100% {
+		top: 10%;
+		left: 50%;
 	}
 }
